aria-checkbox had same issue as native: wrapping in h2 would double-speak label when navigating by heading.
Now using native button with aria-pressed, and CSS which reacts to aria-pressed to update text color and add ::before content "[incomplete]"

--- a/src/ToDo.css
+++ b/src/ToDo.css
@@ -14,4 +14,5 @@
 }
 
 .to-do .item {color: red;}
-.to-do .item.complete {color: green;}
+.to-do .item [aria-pressed="true"] {color: green;}
+.to-do .item [aria-pressed="false"]::before {content: "[incomplete] ";}
